--- a/Basics/assets/css/style.css
+++ b/Basics/assets/css/style.css
@@ -102,3 +102,105 @@
 .empty-cell-table {
     empty-cells: hide;
 }
+/* p14.html code */
+.odd-even-table, .odd-even-table th, .odd-even-table td{
+   border: 1px solid #000;
+   padding: 20px;
+   border-collapse: collapse;
+   color: white;
+}
+.odd-even-table{ 
+   background-color: #87ceeb;
+
+}
+.odd-even-table tr:nth-child(odd){
+   background-color: teal;
+}
+.odd-even-table tr:nth-child(even){
+   background-color: rgb(4,68,68);
+}
+.odd-even-table tr:hover{
+   background-color:brown;
+}
+.odd-even-table th{
+   background-color:#87ceeb;
+}
+.odd-even-table>caption{
+   color: #808080;
+   font-weight: bold;
+   caption-side: bottom;
+   
+}
+.odd-even-table td{
+   height: 100px;
+   vertical-align: center;
+}
+/* p.15 html code */
+.layout-table, .layout-table th, .layout-table td {
+   border: 2px solid #808080;
+   border-collapse: collapse;
+   padding: 20px;
+}
+.layout-table{
+   width: 10%;
+   table-layout: fixed; /*table layout by default is auto */
+}
+.layout-table td, .layout-table th {
+   overflow: scroll;
+}
+/* p16 html code */
+*{
+   padding: 0%;
+   margin: 0%;
+}
+header{
+   background-color: #808080;
+}
+header>nav>ul{
+   list-style-type: none;
+   
+    float: right;
+}
+header>nav>ul>li{
+   display: inline-block;
+   padding: 20px;
+}
+header>nav>ul>li>a{
+   color: white;
+   text-decoration: none;
+}
+header>nav>ul>li:hover {
+   background-color: red;
+}
+header>nav>ul>li:hover a{
+   color: black;
+}
+header>nav> img{
+   height: 54px;
+}
+/* P17 HTML COLOR */
+.banner1{
+   background-color: bisque;
+}
+.bannerCommonClass{
+   color: #808080;
+   padding: 30px;
+   height: 60vh;
+   text-align: center;
+}
+.bannerCommonClass>h1{
+   font-size: 50px;
+}
+.bannerCommonClass>h1:hover{
+   color: #000;
+}
+/* P18 HTML CODE */
+.bannerCommonClass{
+   background-image: url(../images/image\ 1.jpg);
+   background-repeat: no-repeat;
+   background-position: center;
+   background-size: cover;
+   
+   
+   
+}
