--- a/Advanced/assets/css/style.css
+++ b/Advanced/assets/css/style.css
@@ -62,3 +62,199 @@ line-height: 3cm; /* centimeter */
 .cssUnits>h3:nth-child(7){ 
     font-size: 12px; /*  pixels */
 }
+
+/* p6 html code */
+.cssVisibilityDisplay>p{
+    background-color: teal;
+    padding: 20px;
+    border: 5px solid red;
+}
+
+.cssVisibilityDisplay>.cssVisibility{
+    visibility: hidden;
+}
+
+.cssVisibilityDisplay>.cssDisplay{
+    display: none;
+}
+
+/* p7 html code */
+
+.cssWordWrap>p{
+    background-color: #808080;
+    padding: 20px;
+    width: 300px;
+    word-wrap: break-word;
+}
+
+/* p8 html code */
+
+.cssResize{
+    resize:both;
+    overflow: auto;
+}
+
+/* p9 html code */
+
+.cssOffsetOutline{
+    outline: 3px solid black;
+    outline-offset: 10px;
+}
+
+/* p10 html code */
+
+.cssColumnCount{
+    line-height: 2;
+    text-align: justify;
+}
+.cssColumnCount>div{
+    column-count: 5;
+     column-rule: 2px solid red; /*/syntax same as BORDER */
+    column-gap: 50px;
+    /* column-width: 200px;  same as COLUMN-COUNT */
+}
+
+/* p11 html code */
+
+.cssOpacity>p{
+    background-color: teal;
+    color: white;
+    padding: 20px;
+    opacity: 0.2;
+}
+.cssOpacity>div{
+    background-color: rgba(128,128 ,128,0.4);
+    color: rgba(255,255,255,0.5);
+    padding: 20px;
+}
+
+/* p12 html code */
+/* EXAMPLE-1 */
+
+.cssAttribute>h1{
+    color: brown;
+}
+.cssAttribute>p{
+    color: grey;
+}
+.cssAttribute>[title]{
+    background-color: yellow;
+}
+.cssAttribute>p[title]{
+    padding: 20px;
+}
+.cssAttribute>h1[title]{
+    font-style: italic;
+}
+
+/* EXAMPLE-2 */
+.cssAttribute>p>abbr[id]{
+    background-color: red;
+    color: yellow;
+}
+
+/* EXAMPLE-3 */
+
+.cssAttribute>form>[type]{
+    width: 100%;
+    height: 25px;
+    margin-bottom: 20px;
+}
+.cssAttribute>form>[type="text"]{
+    border: 2px solid green;
+    border-radius: 5px;
+}
+.cssAttribute>form>[type="submit"]{
+    background-color: lightskyblue;
+    border: 2px solid red;
+}
+/* p13 html code */
+.cssPosition>h1:first-child, .cssPosition>div>h1:first-child{
+    background-color: teal;
+}
+.cssPosition>h1:nth-child(2), .cssPosition>div>h1:nth-child(2){
+    background-color: tomato;
+
+}
+.cssPosition>h1:nth-child(3), .cssPosition>div>h1:last-child{
+    background-color: violet;
+}
+
+.cssPosition h1{
+    padding: 20px;
+    color: white;
+}
+.cssPosition>div{
+    border: 2px solid black;
+    padding: 20px;
+    
+}
+.cssPosition>.second{
+    position: relative;
+    top: 0%;
+    left: 0%;
+}
+.cssPosition>div>.fifth{
+    position: absolute;
+    top: 0%;
+    right: 0%;
+}
+.cssPosition>div{
+    border: 2px solid black;
+    padding: 20px;
+    position: relative;
+}
+.cssPosition>.seven{
+    background-color: blue;
+}
+.cssPosition>.eight{
+    background-color: crimson;
+    top: 0%;
+    position: sticky;
+}
+.cssPosition>.nine{
+    background-color: black;
+    position: fixed;
+    top: 45%;
+    right: 0%;
+    border-radius: 5px;
+    transition: 1s;
+}
+.cssPosition>.nine:hover{
+    right: 2%;
+}
+.zIndex>section{
+    width: 200px;
+    height: 150px;
+    padding: 20px;
+    color: white;
+    position: absolute;
+}
+.zIndex{
+    position: relative;
+    height: 300px;
+}
+.zIndex>.first{
+    background-color: darkgoldenrod;
+    top: 10px;
+    left: 10px;
+    z-index: 1;
+}
+.zIndex>.second{
+    background-color: darkgreen;
+    top: 50px;
+    left: 50px;
+    z-index: 2;
+}
+.zIndex>.third{
+    background-color: purple;
+    top: 100px;
+    left: 100px;
+    z-index: 3;
+}
+.zIndex>.first:hover{
+    z-index: 4;
+}
+.zIndex>.second:hover{
+    z-index: 4;
+}
